--- a/p3/practicasDjango/proyectoUTDnormal/html/mision.html
+++ b/p3/practicasDjango/proyectoUTDnormal/html/mision.html
@@ -25,9 +25,8 @@
     </nav>
     <section id="content">
        <div class="box">
-            <h1>Acerca de Nosotros</h1>
+            <h1>Mision</h1>
             <hr>
-            <p>Somos un equipo destinado al desarrollo de Software</p>
        </div>
     </section>
     <footer>
